--- a/web/index.html
+++ b/web/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-    <meta name="description" content="Track & Trace app voor wedstrijden met historische zeilende bedrijfsvaartuigen">
+    <meta name="description"
+          content="Track & Trace app voor wedstrijden met historische zeilende bedrijfsvaartuigen">
 
     <!-- iOS meta tags & icons -->
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -12,7 +13,7 @@
     <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="favicon.png"/>
+    <link rel="icon" type="image/png" href="config/favicon.png"/>
 
     <title>SZW Track & Trace</title>
     <link rel="manifest" href="manifest.json">
@@ -20,12 +21,15 @@
     <script>
       // The value below is injected by flutter build, do not touch.
       var serviceWorkerVersion = null;
+
+
+
     </script>
     <!-- This script adds the flutter initialization JS code -->
     <script src="flutter.js" defer></script>
-  </head>
-  <body>
-    <script>
+</head>
+<body>
+<script>
       let useHtml = false;
       window.addEventListener('load', function(ev) {
       _flutter.loader.loadEntrypoint({
@@ -42,6 +46,9 @@
         }
       });
     });
-    </script>
-  </body>
+
+
+
+</script>
+</body>
 </html>
