--- a/web/index.html
+++ b/web/index.html
@@ -4,25 +4,23 @@
     <meta charset="UTF-8">
     <meta content="IE=Edge" http-equiv="X-UA-Compatible">
     <meta name="description"
-          content="Track & Trace app voor wedstrijden met historische zeilende bedrijfsvaartuigen">
+          content="Track & Trace app voor zeil- en roeiwedstrijden">
 
     <!-- iOS meta tags & icons -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="SZW Track &amp; Trace">
+    <meta name="apple-mobile-web-app-title" content="Track &amp; Trace">
     <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="config/favicon.png"/>
 
-    <title>SZW Track & Trace</title>
+  <title>SZW Track Trace</title>
     <link rel="manifest" href="manifest.json">
 
     <script>
       // The value below is injected by flutter build, do not touch.
       var serviceWorkerVersion = null;
-
-
 
     </script>
     <!-- This script adds the flutter initialization JS code -->
@@ -30,24 +28,15 @@
 </head>
 <body>
 <script>
-      let useHtml = false;
-      window.addEventListener('load', function(ev) {
-      _flutter.loader.loadEntrypoint({
-        serviceWorker: {
-          serviceWorkerVersion: serviceWorkerVersion,
-        },
-        onEntrypointLoaded: function(engineInitializer) {
-          let config = {
-            renderer: useHtml ? "html" : "canvaskit",
-          };
-          engineInitializer.initializeEngine(config).then(function(appRunner) {
-            appRunner.runApp();
-          });
-        }
-      });
-    });
-
-
+  let useHtml = false;
+  window.addEventListener('load', function(ev) {
+  _flutter.loader.loadEntrypoint({
+    serviceWorker: { serviceWorkerVersion: serviceWorkerVersion },
+    onEntrypointLoaded: function(engineInitializer) {
+      let config = { renderer: useHtml ? "html" : "canvaskit" };
+      engineInitializer.initializeEngine(config).then(function(appRunner) { appRunner.runApp(); });
+    }});
+  });
 
 </script>
 </body>
