--- a/release/szw/web/index.html
+++ b/release/szw/web/index.html
@@ -10,7 +10,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="Track &amp; Trace">
-    <link rel="apple-touch-icon" href="icons/Icon-192.png">
+    <link rel="apple-touch-icon" href="flutter_icons/Icon-192.png">
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="config/favicon.png"/>
@@ -19,8 +19,8 @@
     <link rel="manifest" href="manifest.json">
 
     <script>
-      // The value below is injected by flutter build, do not touch.
-      const serviceWorkerVersion = "3083883720";
+        // The value below is injected by flutter build, do not touch.
+        const serviceWorkerVersion = "2439192277";
 
     </script>
     <!-- This script adds the flutter initialization JS code -->
@@ -28,15 +28,15 @@
 </head>
 <body>
 <script>
-  let useHtml = false;
-  window.addEventListener('load', function(ev) {
-  _flutter.loader.loadEntrypoint({
-    serviceWorker: { serviceWorkerVersion: serviceWorkerVersion },
-    onEntrypointLoaded: function(engineInitializer) {
-      let config = { renderer: useHtml ? "html" : "canvaskit" };
-      engineInitializer.initializeEngine(config).then(function(appRunner) { appRunner.runApp(); });
-    }});
-  });
+    let useHtml = false;
+    window.addEventListener('load', function(ev) {
+    _flutter.loader.loadEntrypoint({
+      serviceWorker: { serviceWorkerVersion: serviceWorkerVersion },
+      onEntrypointLoaded: function(engineInitializer) {
+        let config = { renderer: useHtml ? "html" : "canvaskit" };
+        engineInitializer.initializeEngine(config).then(function(appRunner) { appRunner.runApp(); });
+      }});
+    });
 
 </script>
 </body>
