--- a/web/index.html
+++ b/web/index.html
@@ -15,7 +15,7 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="config/favicon.png"/>
 
-  <title>Sportvolgen TT</title>
+  <title>SZW Track Trace</title>
     <link rel="manifest" href="manifest.json">
 
     <script>
