--- a/web/index.html
+++ b/web/index.html
@@ -1,4 +1,7 @@
 <html>
+<head>
+    <link rel="icon" type="image/png" href="config/favicon.png"/>
+</head>
 <body>
 <script src="flutter_bootstrap.js" async></script>
 </body>
